--- a/Project.html
+++ b/Project.html
@@ -1,1 +1,174 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About - LaMonje</title>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <style>
+        body {
+            background-color: #EAE2B7;
+            color: #000000;
+            font-family: 'Anton', sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        .navbar {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 10px;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            background: transparent;
+        }
+
+        .navbar a {
+            color: #FB8500;
+            text-decoration: none;
+            margin: 0 15px;
+            transition: color 0.3s ease;
+        }
+
+        .navbar a:hover {
+            color: #000;
+        }
+
+        .content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 20px;
+        }
+
+        .section {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 40px 0;
+        }
+
+        .text {
+            max-width: 50%;
+            margin-right: 20px;
+        }
+
+        .text .title {
+            font-size: 50px;
+            font-family: 'Anton', sans-serif;
+        }
+
+        .text .subtext {
+            font-size: 24px;
+            font-family: 'Shadows Into Light', cursive;
+        }
+
+        .circle {
+            position: relative;
+            width: 400px;
+            height: 400px;
+            border-radius: 50%;
+            overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .circle img {
+            width: 100%;
+            height: auto;
+            transition: transform 0.3s ease;
+        }
+
+        .circle:hover img {
+            transform: scale(1.1);
+        }
+
+        .arrow {
+            position: absolute;
+            right: -40px;
+            top: 50%;
+            transform: translateY(-50%);
+            font-size: 30px;
+            cursor: pointer;
+            transition: color 0.3s ease;
+        }
+
+        .arrow:hover {
+            color: #FB8500;
+        }
+
+        .slider {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .slider .slide {
+            margin: 0 5px;
+            transition: transform 0.3s ease, opacity 0.3s ease;
+        }
+
+        .slider .slide:hover {
+            transform: scale(1.1);
+            opacity: 1;
+        }
+
+        @media (max-width: 768px) {
+            .text .title {
+                font-size: 30px;
+            }
+
+            .text .subtext {
+                font-size: 18px;
+            }
+
+            .circle {
+                width: 300px;
+                height: 300px;
+            }
+
+            .slider .slide {
+                width: 80px;
+                height: 80px;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="navbar">
+        <a href="home.html">Home</a>
+        <a href="projects.html">Projects</a>
+        <a href="about.html">About</a>
+        <a href="connect.html">Connect</a>
+    </div>
+    <div class="content">
+        <div class="section">
+            <div class="text">
+                <div class="title">Hub of African’s Fashion Week (HAFW), Industry: Fashion</div>
+                <div class="subtext">
+                    What We Did:<br>
+                    ● Impact Analysis<br>
+                    ● Venue Design<br>
+                    ● Staffing Solutions<br>
+                    ● Comprehensive Reporting
+                </div>
+            </div>
+            <div class="circle">
+                <img src="your-image.jpg" alt="Fashion Week Image">
+                <div class="arrow">→</div>
+            </div>
+        </div>
+        <div class="slider">
+            <div class="slide"><img src="image1.jpg" alt="Slide Image 1"></div>
+            <div class="slide"><img src="image2.jpg" alt="Slide Image 2"></div>
+            <div class="slide"><img src="image3.jpg" alt="Slide Image 3"></div>
+            <div class="slide"><img src="image4.jpg" alt="Slide Image 4"></div>
+            <div class="slide"><img src="image5.jpg" alt="Slide Image 5"></div>
+        </div>
+    </div>
+</body>
+</html>
 
