--- a/connect.html
+++ b/connect.html
@@ -181,29 +181,23 @@
         <div class="right-side">
             <div class="contact-info">
                 <div class="person">
-                    <strong>Person 1</strong><br>
-                    Phone: 123-456-7890<br>
-                    Address: 123 Main St, City, Country<br>
-                    Email: person1@lamonje.com
+                    <strong>Yeabkal Demissew</strong><br>
+                    Phone: +2519 4247 1649<br>
+                    Address: Addis Abeba, ETHIOPIA<br>
+                    Email: yeabkaldemissew14@gmail.com
                 </div>
                 <div class="person">
-                    <strong>Person 2</strong><br>
-                    Phone: 098-765-4321<br>
-                    Address: 456 Another St, City, Country<br>
-                    Email: person2@lamonje.com
-                </div>
-                <div class="person">
-                    <strong>Person 3</strong><br>
-                    Phone: 555-555-5555<br>
-                    Address: 789 Some St, City, Country<br>
-                    Email: person3@lamonje.com
+                    <strong>Bethlehem Ghide</strong><br>
+                    Phone: +250 794 555 111<br>
+                    Address: Kigali, RWANDA<br>
+                    Email: bettyghgm@gmail.com
                 </div>
             </div>
         </div>
     </div>
     <div class="footer">
         <a href="https://www.facebook.com">Facebook</a>
-        <a href="https://www.instagram.com">Instagram</a>
+        <a href="https://www.instagram.com/la_monje?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram</a>
     </div>
     <script>
         window.addEventListener('load', () => {
