--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <style>
         body {
-            background-color: #000000;
+            background-color: #caf0f8;
             color: #FB8500;
             font-family: 'Anton', sans-serif;
             margin: 0;
@@ -62,7 +62,7 @@
         }
 
         .image-block .image-caption {
-            color: #FB8500;
+            color: #000000;
             margin-top: 10px;
         }
 
@@ -70,7 +70,7 @@
             font-size: 150px;
             text-align: center;
             margin: 50px 0;
-            color: #FB8500;
+            color: #000000;
             letter-spacing: 15px;
         }
 
@@ -101,7 +101,7 @@
         .paragraph {
             text-align: center;
             margin: 50px 20px;
-            color: #FB8500;
+            color: #000000;
         }
 
         .footer {
